push de ayoub et khalid rework sur l'ensemble de projet

--- a/PowerRangers-master/auth_service/.env
+++ b/PowerRangers-master/auth_service/.env
@@ -1,5 +1,5 @@
 # DB_URL=postgresql://postgres:admin@localhost:5432/drop_db
 # SECRET_KEY=admin
 
-DB_URL=postgresql://postgres:khalidmdp@localhost:5432/taxi-db
-KHALID_POSGRE = khalidmdp
+DB_URL=postgresql://postgres:ayoub@localhost:5432/taxi
+Ayoub_POSGRE = ayoub
