--- a/PowerRangers-master/taxi-frontend/package.json
+++ b/PowerRangers-master/taxi-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.7.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "leaflet": "^1.9.4",
