--- a/PowerRangers-master/taxi-frontend/package.json
+++ b/PowerRangers-master/taxi-frontend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
